# sdek

./: .gitignore  compose.yml  default.conf  infrastructure.yml  init-mongo-db-with-collections.js  kubernetes.yml  nginx.conf
sdekapi/authservice/: .env  Cargo.toml  Dockerfile
sdekapi/authservice/.sqlx/: query-7d0fd180e85e63f25d975ad8505e1ea7bc7e02f0b03537aba60a0eb3d907c5b3.json  query-936142fe91a7b93a9d8f5596d31e82b3bec58235b6754661105615c6c4f27f7f.json
sdekapi/authservice/src/: error.rs  handlers.rs  main.rs  model.rs
sdekapi/consumerreadservice/: .env  Cargo.toml  Dockerfile
sdekapi/consumerreadservice/.sqlx/: query-0281f861da80c3e29bba102f5c159a951686676151e92ca88c0f242f799bdf4b.json  query-0b405217d332c0c80a43b73c0ec2f3e1c473593d71ff46cd8ce14714ac368476.json  query-12d303e28305c592385c1b944a49e548bc9866685a2a75588b4782b5668ccfc4.json  query-243067dcc8d910b23d14c4935c38b231ca9df6d27325ba7b90b44a68b4b94dd3.json  query-27dcb2765ae5e93965ae0a49661f43b9bc8aa02e13c6ecee12d8b44d4b1e5997.json  query-a8e2ff326ff1d1c01aba162d4c7d77122982c0d086dccd2ab5f3e42d74ef4aba.json  query-b31b3b70f60d4cf1e0cefc86cd12d3aeec8ae797525b2e0cb71cde726740b23e.json
sdekapi/consumerreadservice/src/: handlers.rs  main.rs  model.rs
sdekapi/consumerservice/: Cargo.toml  Dockerfile
sdekapi/consumerservice/src/: error.rs  handlers.rs  main.rs  model.rs
sdekapi/employeeservice/: .env  Cargo.toml  Dockerfile
sdekapi/employeeservice/src/: handlers.rs  main.rs  model.rs
sdekapi/messenderservice/: Cargo.toml  Dockerfile
sdekapi/messenderservice/src/: handlers.rs  main.rs  model.rs
sdekapi/packagereadservice/: .env  Cargo.toml  Dockerfile
sdekapi/packagereadservice/.sqlx/: query-05be477c8301ad7b0cadf97ebcf2dea1386420ce10aa346eb5fef1a24e817768.json  query-09cc16b58318884cb5e7dd3ca4339c3162760b94d611366620a0fb5d2a00de02.json  query-0f3e37861526bf0ac40a45fb333e2c42c826d6c8af55e43d657492c5f6f7dece.json  query-13a1c1541d327254bdf48682534176d2df86e5ec6159d215908b3bc64c87a139.json  query-14c7b9ae730003cb4402a5b6e9af3f47dbc44e4821de77e754a397e7afe9612b.json  query-14d105f2109a28d15a83e90fba033d5bfb869e25f9711abc90234501e937a758.json  query-165135367012dce305585de2c0279d7d42548d88b6616582a353d4b8a8bffe0f.json  query-1f0d6d1f4a97431fa3b1ccfdcf48ddd9fffd1bc01f1248a45f2a8dfd0646abc5.json  query-2225da146db08d78c6da2e4982ac066a7288671e3391d7a149b927a56e1f514a.json  query-242658c9523be7c261927a75f4550371284be59bc3cc220f6ab5bf50906bc6f9.json  query-2fe6913a3ee945f050537c8d30b9a313e79ae9f815a275c9d4e2426cfd7a6d3d.json  query-313a544f64cbb9a115e82dd003f257b64bb686282d83a48e9db5263c7ac6518e.json  query-3d41affd6ee63d82dfce264306419817ac2ac6b6866b18538cec7539b0e021ff.json  query-436e55325cecab5599acadaf876ac522d3238bdf2347f7b75cde1383cca70cf0.json  query-4621e3b75d9879fcfccb89104c4be349b682c32857d6841ed3a5c046fc302621.json  query-497f75317b53688fee3398624c6e0e6fd6525ab9919b2845a8c4d6406299b1d4.json  query-4bf6256e884574c8789c7e7440d268477055d7aba3f52ad8937474055b3700e3.json  query-4e93899f2a1b7dd46c3a990be90e490901dd258f927fffdf5f5ee5c0f9547550.json  query-5b7f9bbecd8b03b9ea284e4c5147a845aba5c370aa7a63c3e423da4a656eb671.json  query-5edac72d6674f7b69bcff56bab878147e87213b6528851cffed35e3e61d49480.json  query-5f6af05040a3cf0ef9e8e0632d7e5f8a97b7805f2de51097b17528fbbd808983.json  query-637d14b922aafad2d0c18276e8f913cdaed89af9567ce55a9710d529d0c4cdfc.json  query-6b6aea2bc5b35ecbe8853ec7c46f8141a3a87b55e65304bf3de0ea9fe0bd751d.json  query-6eebd7138743ba134a82cbea308b921ea571d9f9e934802980fb10657fd554f2.json  query-72ce90252acfb1ed6b2480835d377f905c8e6d93e8175c8115c0e44106c1da3b.json  query-a0bfac7e02431e6329deb541be09cd167191d570c0bf3e098451e9b04c2152de.json  query-a1a13d270f4076ca1b39e5020ba02bf981c44f10caee55aaeb623ee8ac83d7c3.json  query-ba65f1d66af1b10903118ae93c343db971f2316579129e097616924cebcf50e6.json  query-bc1bf466c4fe1eaf654057b4e4dc8a59d28481157c2c05945e1fe632e85b6c34.json  query-ce9b1dca0fe8a1adeb66f56441f5750e6bfed22bc1dbcf346cdd37beedef1a36.json  query-cef323256f1235c61267b5e7cd3d449b6df604649584c196551a931f9ed8b4f2.json  query-cfa1760c038ff097179f730109b935e856f8a5026a36cd342079ca9945bdb9f2.json  query-e79212e8d608e75b8094f96f30cb353690cf6191c886447d3b03c51188abbe9e.json  query-edcd9efb5595acb281ee47a26d9a38e18c07c7fbc42efd88197cc0dd5191531e.json
sdekapi/packagereadservice/src/: error.rs  handlers.rs  main.rs  model.rs
sdekapi/transportreadservice/: .env  Cargo.toml  Dockerfile
sdekapi/transportreadservice/.sqlx/: query-0a6e99ef5411a1573b8e79e9912e3b94c969be65e292e150f48ee5d4a2704a3e.json  query-15c8dea9e6e69e5adc953db903adb8e8466f04c5bbf0958cb7b41c6b5b4f07c9.json  query-212cf0463d3091db33375b84b55c140aee709216caf42f4ef3028e8899d52f31.json  query-3b0a190bad04f1fc7fbe401692cbdc784fd27ad8075db412915f9678cb678a37.json  query-57ff615837318774e187c2be0d1b626d78810e71b831dca5f284647270eb6dab.json  query-68cebb6e9e9167437ce72eb52a554198839795b03b9594e814427a1169a1a719.json  query-6c4b164f4a6079edb38a53ae3e683be1295695151d5f262d9557f02ed851b76f.json  query-837de5fc9491b298d24a1730fdf31f0a488208d3bda6171ace4fe4e640d500d0.json  query-93b5c3bfa1baff95b03b72bff3105fc8078b3ed22add11622c6ce93ea781cecb.json  query-a319abf82d18380b6fb63a1b1aac75bd7d9069f2226a21804115d83f6cb9bc34.json  query-c3c15487d089c749f70a2353ac4f3177450b22d38e0dda70a9f0fef8689d734b.json  query-ec191cdff08a50a44a91d3f998caee8673bd49d489f19b84407753ed48c4bb3b.json
sdekapi/transportreadservice/src/: handlers.rs  main.rs  model.rs
sdekapi/transportservice/: Cargo.toml  Dockerfile
sdekapi/transportservice/src/: error.rs  handlers.rs  main.rs  model.rs
sdekapi/userreadservice/: .env  Cargo.toml  Dockerfile
sdekapi/userreadservice/.sqlx/: query-01c851b0bf73454e2e979037bf32d2bc00cf0a03952e2d4301b999bc9bac7f65.json  query-62499bb7ad89adb0dfc33a628976fdf658d125dbdcc7b613d81f7d5dd6a20320.json  query-9576538fd76f6721af1df34cdd6e2571df1e649a79e252b3ad70d60de064067a.json  query-a75768c425140c61a2404234c3276b7e49584404056fcd11d9edf1387a8408ea.json  (+2 more)
sdekapi/userreadservice/src/: handlers.rs  (+2 more)
sdekapi/userservice/: .env  Cargo.toml  Dockerfile
(+545 files in other folders)
