[package]
name = "authservice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["macros", "json"] }
axum_session = "0.16.0"
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = "0.15.7"
oauth2 = "5.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
redis = { version = "0.29.2", features = ["uuid", "aio", "ahash", "tokio-comp", "connection-manager", "json"] }
redis-macros = "0.5.2"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "chrono", "postgres", "uuid"] }

[dependencies.uuid]
version = "1.16.0"
features = [
    "v7",
    "serde",
    "macro-diagnostics",
]

[dependencies.zip]
version = "=2.3.0"