[package]
name = "consumerreadservice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros", "ws", "json"] }
serde = "1.0.214"
serde_json = "1.0.132"
derive_more = { version = "1.0.0", features = ["full"] }
dotenvy = "0.15.7"
redis = { version = "0.27.5", features = ["uuid", "aio", "ahash", "tokio-comp", "connection-manager", "json"] }
redis-macros = "0.4.2"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "chrono", "postgres", "uuid", "macros"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "5.2.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
futures = "0.3.31"
eventstore = "3.0.0"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v7",
    "serde",
    "macro-diagnostics",
]
