[package]
name = "consumerreadservice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "ws", "json"] }
serde = "1.0.219"
serde_json = "1.0.140"
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = "0.15.7"
redis = { version = "0.31.0", features = ["uuid", "aio", "ahash", "tokio-comp", "connection-manager", "json"] }
redis-macros = "0.5.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "chrono", "postgres", "uuid", "macros"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
futures = "0.3.31"
eventstore = "4.0.0"