[package]
name = "consumerservice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "ws", "json"] }
serde = "1.0.208"
serde_json = "1.0.125"
derive_more = { version = "1.0.0", features = ["full"] }
dotenvy = "0.15.7"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
eventstore = "3.0.0"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v7", # Lets you generate random UUIDs
    "serde", # Use _a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
