[package]
name = "messenderservice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros", "ws"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
derive_more = { version = "1.0.0", features = ["full"] }
dotenvy = "0.15.7"
bincode = "1.3.3"
eventstore = "3.0.0"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v7", # Lets you generate random UUIDs
    "serde", # Use _a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
