[package]
name = "messenderservice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["macros", "ws"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = "0.15.7"
bincode = "2.0.1"
eventstore = "4.0.0"

[dependencies.uuid]
version = "1.16.0"
features = [
    "v7", # Lets you generate random UUIDs
    "serde", # Use _a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.zip]
version = "=2.3.0"