[package]
name = "transportreadservice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "ws", "json"] }
mongodb = "3.0.1"
serde = "1.0.208"
serde_json = "1.0.125"
derive_more = { version = "1.0.0", features = ["full"] }
dotenvy = "0.15.7"
redis = { version = "0.26.1", features = ["uuid", "aio", "ahash", "tokio-comp", "connection-manager", "json"] }
redis-macros = "0.4.0"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-native-tls", "chrono", "postgres", "uuid", "macros"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
futures = "0.3.30"
bincode = { version = "2.0.0-rc.3" }
eventstore = "3.0.0"
reqwest = "0.12.7"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v7", # Lets you generate random UUIDs
    "serde", # Use _a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
