[package]
name = "userservice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.18"
dotenvy = "0.15.7"
native-tls = "0.2.12"
postgres-native-tls = "0.5.0"
redis = { version = "0.26.0", features = ["uuid", "aio", "ahash", "tokio-comp", "connection-manager", "json"] }
redis-macros = "0.3.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-native-tls", "chrono", "postgres", "uuid"] }
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }

[dependencies.uuid]
version = "1.10.0"
features = [
    "v7", # Lets you generate random UUIDs
    "serde", # Use _a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
